--- a/.env-example
+++ b/.env-example
@@ -2,5 +2,5 @@ APP_NAME=MyApplicationName
 APP_DOMAIN=mywebsite.com
 APP_ENV=development
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=America/New_York
 APP_ENCODING=UTF-8
