Added support for version 1.2 of basephp framework.

--- a/.env-example
+++ b/.env-example
@@ -5,3 +5,10 @@ APP_DEBUG=true
 APP_TIMEZONE=America/New_York
 APP_ENCODING=UTF-8
 APP_GLOBALS=false
+
+DB_USER=admin
+DB_PASS=password
+DB_HOST=127.0.0.1
+DB_NAME=database
+DB_PORT=3306
+DB_DRIVER=MySQLi
